deployments/nginxtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxtest
  namespace: nginxtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxtest
  template:
    metadata:
      labels:
        app: nginxtest
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: nginx
          image: bitnami/nginx:latest
          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d

      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-conf
          emptyDir: {}
