deployments/nginxtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxtest
  namespace: nginxtest
spec:
  type: ClusterIP
  selector:
    app: nginxtest
  ports:
    - name: http
      port: 80
      targetPort: 8080
