deployments/nginxtest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginxtest
  namespace: nginxtest
spec:
  to:
    kind: Service
    name: nginxtest
    weight: 100
  port:
    targetPort: 8080
